--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,27 +8,33 @@
 </head>
 <body>
     <h1>Corona Tracker</h1>
-    <table id="confirmedTable">
-        <tr>
-            <th>State</th>
-            <th>Region</th>
-            <th>Cases</th>
-        </tr>
-        <tr th:each="locationConfirmedStat : ${locationConfirmedStats}">
-            <td th:text="${locationConfirmedStat.state}"></td>
-            <td th:text="${locationConfirmedStat.region}"></td>
-            <td th:text="${locationConfirmedStat.latestTotalCases}"></td>
-
-            </td>
-        </tr>
-    </table>
-    <table id="deathTable">
-        <tr>
-            <th>Deaths</th>
-        </tr>
-        <tr th:each="locationDeathStat : ${locationDeathStats}">
-            <td th:text="${locationDeathStat.latestTotalDeath}"></td>
-        </tr>
-    </table>
+    <div class="jumbotron">
+        <h1 class="display-4" th:text="${totalConfirmed}"></h1>
+        <p class="lead">Confirmed cases</p>
+        <h1 class="display-4" th:text="${totalDeath}"></h1>
+        <p class="lead">Deaths</p>
+    </div>
+    <div class="container">
+        <table id="confirmedTable">
+            <tr>
+                <th>State</th>
+                <th>Region</th>
+                <th>Cases</th>
+            </tr>
+            <tr th:each="locationConfirmedStat : ${locationConfirmedStats}">
+                <td th:text="${locationConfirmedStat.state}"></td>
+                <td th:text="${locationConfirmedStat.region}"></td>
+                <td th:text="${locationConfirmedStat.latestTotalCases}"></td>
+            </tr>
+        </table>
+        <table id="deathTable">
+            <tr>
+                <th>Deaths</th>
+            </tr>
+            <tr th:each="locationDeathStat : ${locationDeathStats}">
+                <td th:text="${locationDeathStat.latestTotalDeath}"></td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
