--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,17 +1,31 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 body {
     text-align: center;
     white-space: nowrap;
+    overflow-x: hidden;
+}
+
+h1 {
+    padding: 1rem;
 }
 
 .container {
-
+    padding: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    column-width: 0;
 }
 
-#confirmedTable{
+#confirmedTable {
     float: left;
-
 }
-#deathTable{
+#deathTable {
     display: inline-block;
     padding-left: 2rem;
 }
