--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,6 +9,7 @@
 <body>
     <div class="pageContainer">
         <h1>Corona Tracker</h1>
+        <p>Globally tracking COVID-19, using data from Johns Hopkins University.</p>
         <div class="jumbotron">
             <h2 class="display-4" th:text="${totalConfirmed + ' (+'+ totalNewConfirmed + ')'}"></h2>
             <p class="lead">Confirmed cases (New cases)</p>
